Update service for treeSpecies